@@ -1,3 +1,4 @@
+(r3704) Enable toggling between fullscreen and window mode at runtime by pressing ALT+RETURN.
 (r3675) Fix a vanilla display glitch: Set the name of crows to "CROW" instead of "CIVILIAN", so the proper name is displayed in the overhead map.
 (r3673) Fix vanilla display glitches when drawing the list of names of items on the ground: Properly clamp the list to the view area and prevent incorrect display, when invisible items are present.
 (r3668) Fix vanilla displacement of people and item markers in the overhead map for smaller maps (like the rebel basement).
